relação de produtos e marcas

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -166,13 +166,13 @@ sup {
 }
 
 a {
-  color: #007bff;
+  color: #FF6F59;
   text-decoration: none;
   background-color: transparent;
 }
 
 a:hover {
-  color: #0056b3;
+  color: #ff2d0d;
   text-decoration: underline;
 }
 
@@ -4278,12 +4278,12 @@ fieldset:disabled a.btn {
 
 .btn-link {
   font-weight: 400;
-  color: #007bff;
+  color: #FF6F59;
   text-decoration: none;
 }
 
 .btn-link:hover {
-  color: #0056b3;
+  color: #ff2d0d;
   text-decoration: underline;
 }
 
@@ -6284,14 +6284,14 @@ input[type="button"].btn-block {
   padding: 0.5rem 0.75rem;
   margin-left: -1px;
   line-height: 1.25;
-  color: #007bff;
+  color: #FF6F59;
   background-color: #fff;
   border: 1px solid #dee2e6;
 }
 
 .page-link:hover {
   z-index: 2;
-  color: #0056b3;
+  color: #ff2d0d;
   text-decoration: none;
   background-color: #e9ecef;
   border-color: #dee2e6;
