--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,3 +1,7 @@
+.myToast {
+  z-index: 5000 !important;
+}
+
 /*!
  * Bootstrap v4.3.1 (https://getbootstrap.com/)
  * Copyright 2011-2019 The Bootstrap Authors
